WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247001
LibWebRTCVPXVideoEncoder does not need to set the decoder codecType
https://bugs.webkit.org/show_bug.cgi?id=247001
Summary
LibWebRTCVPXVideoEncoder does not need to set the decoder codecType
youenn fablet
Reported
2022-10-25 04:27:00 PDT
LibWebRTCVPXVideoEncoder does not need to set the decoder codecType
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-10-25 04:27:18 PDT
<
rdar://problem/101539998
>
youenn fablet
Comment 2
2022-10-25 04:55:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5751
EWS
Comment 3
2022-10-26 04:08:54 PDT
Committed
256006@main
(09b196a141a8): <
https://commits.webkit.org/256006@main
> Reviewed commits have been landed. Closing PR #5751 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug