LibWebRTCVPXVideoEncoder does not need to set the decoder codecType https://bugs.webkit.org/show_bug.cgi?id=247001 rdar://problem/101539998

Reviewed by Eric Carlson.

Do not set the codec type for VPx, instead, reuse the one provided by the web application.

* LayoutTests/imported/w3c/web-platform-tests/webcodecs/full-cycle-test.https.any_vp9_p0-expected.txt:
* Source/WebCore/platform/LibWebRTCVPXVideoEncoder.cpp:
(WebCore::LibWebRTCVPXVideoEncoder::create):

Canonical link: https://commits.webkit.org/256006@main